fixed header alignment and main top

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ form .btn {
   display: none;
 }
 
-@media screen and (min-width: 540px) {
+@media screen and (min-width: 768px) {
   .nav-tabs {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -86,7 +86,7 @@ form .btn {
   }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 768px) {
   .tab-content > .tab-pane {
     display: block !important;
     opacity: 1;
