--- a/scss/partials/_page.scss
+++ b/scss/partials/_page.scss
@@ -5,10 +5,10 @@ body {
 }
 
 header {
-	width: 85%;}
-
+	width: 85%;
+}
 
 h1 {
-  font-family: $heading-font;
-  color: getColor(red);
+	font-family: $heading-font;
+	color: getColor(red);
 }
