--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,4 +1,4 @@
-$mobile-width: 540px;
+$mobile-width: 768px;
 $heading-font: 'Playfair Display', serif;
 $text-font: 'Lato', sans-serif;
 
